k8s/httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: httpd
  name: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: httpd
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/pim: "true"
        io.kompose.service: httpd
    spec:
      containers:
      - env:
        - name: APP_ENV
          value: prod
        image: httpd:2.4
        imagePullPolicy: ""
        name: httpd
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        volumeMounts:
        - mountPath: /srv/pim
          name: fpm-claim0
          readOnly: true
        - mountPath: /usr/local/apache2/conf/httpd.conf
          name: httpd-claim1
          readOnly: true
        - mountPath: /usr/local/apache2/conf/vhost.conf
          name: httpd-claim2
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: fpm-claim0
        persistentVolumeClaim:
          claimName: fpm-claim0
          readOnly: true
      - name: httpd-claim1
        persistentVolumeClaim:
          claimName: httpd-claim1
          readOnly: true
      - name: httpd-claim2
        persistentVolumeClaim:
          claimName: httpd-claim2
          readOnly: true
status: {}
