k8s/object-storage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: object-storage
  name: object-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: object-storage
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/pim: "true"
        io.kompose.service: object-storage
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - mkdir -p /data/asset /data/archive /data/catalog/ /data/jobs && minio server
          /data
        image: minio/minio
        imagePullPolicy: ""
        name: object-storage
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "250m"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
