k8s/pubsub-emulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pubsub-emulator
  name: pubsub-emulator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pubsub-emulator
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/pim: "true"
        io.kompose.service: pubsub-emulator
    spec:
      containers:
      - args:
        - gcloud
        - --user-output-enabled
        - --log-http
        - beta
        - emulators
        - pubsub
        - start
        - --host-port=0.0.0.0:8085
        image: google/cloud-sdk:312.0.0
        imagePullPolicy: ""
        name: pubsub-emulator
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "250m"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
