k8s/selenium-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: selenium
  name: selenium
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: selenium
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/pim: "true"
        io.kompose.service: selenium
    spec:
      containers:
      - image: selenium/standalone-chrome-debug:3
        imagePullPolicy: ""
        name: selenium
        ports:
        - containerPort: 5900
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        volumeMounts:
        - mountPath: /srv/pim
          name: selenium-claim0
          readOnly: true
        - mountPath: /dev/shm
          name: selenium-claim1
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: selenium-claim0
        persistentVolumeClaim:
          claimName: selenium-claim0
          readOnly: true
      - name: selenium-claim1
        persistentVolumeClaim:
          claimName: selenium-claim1
status: {}
