k8s/object-storage-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: object-storage
  name: object-storage
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 9000
  selector:
    io.kompose.service: object-storage
status:
  loadBalancer: {}
