k8s/selenium-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: selenium
  name: selenium
spec:
  ports:
  - name: "5910"
    port: 5910
    targetPort: 5900
  selector:
    io.kompose.service: selenium
status:
  loadBalancer: {}
