k8s/pim-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: pim
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/pim: "true"
  podSelector:
    matchLabels:
      io.kompose.network/pim: "true"
